<resources>
    <string name="app_name">Instagram Clone App</string>
    <string name="app_logo_content_description">App logo</string>
    <string name="username">Username</string>
    <string name="username_key">username</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign up</string>
    <string name="no_account_yet_sign_up">No account yet? Sign up!</string>
    <string name="account_log_in">Already registered? Login!</string>
    <string name="log_in">Log in</string>
    <string name="sign_up_successful">You have successfully signed up</string>
    <string name="sign_up_failed">Signed up failed</string>
    <string name="login_failed">Login failed</string>
    <string name="login_successful">You have successfully logged in</string>
    <string name="or">Or,</string>
    <string name="username_password_required">Username and password required</string>
    <string name="share">Share</string>
    <string name="permission_denied">Permission denied</string>
    <string name="image_table_key">Image</string>
    <string name="image_column_key">image</string>
    <string name="image_shared">Image has been shared</string>
    <string name="image_not_shared">There has been an issue uploading the image</string>
    <string name="created_at_column_key">createdAt</string>
    <string name="logout">Logout</string>
    <string name="user_feed">User feed</string>
    <string name="photos">\'s photos</string>
    <string name="person_image_content_description">Person image</string>
    <string name="repeat_password">Repeat password</string>
    <string name="passwords_do_not_match">Passwords do not match</string>
    <string name="username_or_password_too_short">Username and password must be at least 4 characters</string>
    <string name="no_spaces_allowed">Username and password cannot contain empty spaces</string>
    <string name="no_photos_available">No photos available</string>
    <string name="user_feed_image_content_description">User feed image</string>
    <string name="user_list">User List</string>
</resources>